Added dark theme, Bitwarden import and Lastpass import

--- a/css/passwords.css
+++ b/css/passwords.css
@@ -2,18 +2,8 @@
     width: 8px;
 }
 
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #8580e5;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #4E47E0;
-}
-
 body{
+    min-width: 500px;
+    min-height: 500px;
     overflow-x: hidden;
 }
