--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
 body{
     min-width: 300px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number]{
+    -moz-appearance: textfield;
+}
