--- a/css/themes/nord.css
+++ b/css/themes/nord.css
@@ -8,15 +8,15 @@
 	Text colors
 */
 
-.primaryColor{
+.primaryColor {
 	color: #88c0d0 !important;
 }
 
-.secondaryColor{
+.secondaryColor {
 	color: #6B7280 !important;
 }
 
-.tertiaryColor{
+.tertiaryColor {
 	color: #FFFFFF !important;
 }
 
@@ -24,19 +24,19 @@
 	Background colors
 */
 
-.primaryBackgroundColor{
+.primaryBackgroundColor {
 	background-color: #2e3440 !important;
 }
 
-.secondaryBackgroundColor{
+.secondaryBackgroundColor {
 	background-color: #3b4252 !important;
 }
 
-.tertiaryBackgroundColor{
+.tertiaryBackgroundColor {
 	background-color: #434c5e !important;
 }
 
-.quaternaryBackgroundColor{
+.quaternaryBackgroundColor {
 	background-color: #88c0d0 !important;
 }
 
@@ -44,40 +44,40 @@
 	Button colors
 */
 
-.primaryButton{
+.primaryButton {
 	background-color: #88c0d0 !important;
 	color: #FFFFFF !important;
 }
 
-.primaryButton:hover{
+.primaryButton:hover {
 	background-color: #7fbbcc !important;
 }
 
-.successButton{
+.successButton {
 	background-color: #a2bd8b !important;
 	color: #FFFFFF !important;
 }
 
-.successButton:hover{
+.successButton:hover {
 	background-color: #97b57d !important;
 }
 
-.dangerButton{
+.dangerButton {
 	background-color: #75647a !important;
 	color: #FFFFFF !important;
 }
 
-.dangerButton:hover{
+.dangerButton:hover {
 	background-color: #6b5c70 !important;
 }
 
-.cancelButton{
+.cancelButton {
 	background-color: #434c5e !important;
 	border-color: #3b4252 !important;
 	color: #FFFFFF !important;
 }
 
-.cancelButton:hover{
+.cancelButton:hover {
 	background-color: #434c5e !important;
 }
 
@@ -85,62 +85,66 @@
 	Elements
 */
 
-input{
+input {
 	background-color: #434c5e !important;
 	color: #FFFFFF !important;
 	border-color: #3b4252 !important;
 }
 
-textarea{
+textarea {
 	background-color: #434c5e !important;
 	color: #FFFFFF !important;
 	border-color: #3b4252 !important;
 }
 
-svg{
+svg {
 	stroke: #88c0d0 !important;
+}
+
+input[type="checkbox"] {
+	accent-color: #88c0d0;
 }
 
 /*
 	Main menu
 */
 
-.mainMenuLink{
+.mainMenuLink {
 	background-color: #3b4252 !important;
 	color: #6B7280 !important;
 }
 
-.mainMenuLink:hover{
+.mainMenuLink:hover {
 	color: #FFFFFF !important;
 	border-color: #D1D5DB !important;
 }
 
-.mainMenuLinkSelected{
+.mainMenuLinkSelected {
 	color: #FFFFFF !important;
 	border-color: #88c0d0 !important;
 }
 
-.mainMenuMobileLink{
+.mainMenuMobileLink {
 	background-color: #3b4252 !important;
 	color: #FFFFFF !important;
 }
 
-.mainMenuMobileLink:hover{
+.mainMenuMobileLink:hover {
 	background-color: #434c5e !important;
 	border-color: #6B7280 !important;
 }
 
-.mainMenuMobileLinkSelected{
+.mainMenuMobileLinkSelected {
 	background-color: #434c5e !important;
 	border-color: #88c0d0 !important;
 	color: #88c0d0 !important;
 }
 
-#main-menu-toggle-btn{
+#main-menu-toggle-btn {
 	color: #9CA3AF !important;
 }
 
-#main-menu-toggle-btn:hover{
+#main-menu-toggle-btn:hover {
 	color: #6B7280 !important;
 	background-color: #434c5e !important;
 }
@@ -149,7 +153,7 @@ svg{
 	Border colors
 */
 
-.primaryBorderColor{
+.primaryBorderColor {
 	border-color: #3b4252 !important;
 }
 
@@ -157,12 +161,12 @@ svg{
 	Placeholder colors
 */
 
-.primaryBorderColor::placeholder{
+.primaryBorderColor::placeholder {
 	color: #6B7280;
 	opacity: 1;
 }
 
-.primaryBorderColor::-ms-input-placeholder { /* Microsoft Edge */
+.primaryBorderColor::-ms-input-placeholder {
 	color: #6B7280;
 	opacity: 1;
 }
@@ -171,7 +175,7 @@ svg{
 	Stroke colors
 */
 
-.primaryStrokeColor{
+.primaryStrokeColor {
 	stroke: #FFFFFF !important;
 }
 
@@ -179,11 +183,11 @@ svg{
 	Passwords
 */
 
-.passwordsBackgroundColor{
+.passwordsBackgroundColor {
 	background-color: #2e3440 !important;
 }
 
-.passwordsBorderColor{
+.passwordsBorderColor {
 	border-color: #111827 !important;
 }
 
@@ -191,12 +195,12 @@ svg{
 	Import and Export buttons
 */
 
-.importExportButtons{
+.importExportButtons {
 	color: #b1bfce !important;
 	border-color: #2e3440 !important;
 }
 
-.importExportButtons:hover{
+.importExportButtons:hover {
 	color: #91a6ba !important;
 }
 
