--- a/css/export.css
+++ b/css/export.css
@@ -8,6 +8,10 @@ body{
 	overflow-x: hidden;
 }
 
+body * {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 #passky-logo{
 	background-color: #e6f5ff;
 }
