--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@ body{
 	min-width: 300px;
 }
 
+body * {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button{
 	-webkit-appearance: none;
