--- a/css/passwords.css
+++ b/css/passwords.css
@@ -8,6 +8,10 @@ body{
 	overflow-x: hidden;
 }
 
+body * {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button{
 	-webkit-appearance: none;
