--- a/css/settings.css
+++ b/css/settings.css
@@ -8,6 +8,10 @@ body{
 	overflow-x: hidden;
 }
 
+body * {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 select{
 	-webkit-appearance: none;
 }
