--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,15 @@
 body{
-	min-width: 300px;
+	min-width: 350px;
+	min-height: 350px;
+	overflow-x: hidden;
 }
 
 body * {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+::-webkit-scrollbar {
+	width: 8px;
 }
 
 input::-webkit-outer-spin-button,
